# cfms_on_websocket

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BACKUP_FEATURE.md  BACKUP_IMPORT.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUIC_SUPPORT.md  README.md  SECURITY.md  TEST_SUITE_SUMMARY.md  config.sample.toml  config.toml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test.py  test_backup.py  test_backup_api.py  test_backup_client.py  test_main.py  test_restore.py
.github/workflows/: README.md  test.yml
content/restore_test/files/: test_file_1  test_file_2
docs/: SEARCH_API.md  TWO_FACTOR_AUTH.md
include/: __init__.py  conf_loader.py  connection_handler.py  constants.py
include/classes/: __init__.py  access_rule.py  auth.py  connection.py  exceptions.py  request.py  users.py  version.py
include/database/: __init__.py  handler.py  models.py
include/database/models/: __init__.py  blocking.py  classic.py  entity.py  file.py  general.py
include/function/: audit.py  group.py  log.py  pwd.py  rule.py  transfer.py  user.py
include/function/rule/: applying.py  validation.py
include/handlers/: README  __init__.py  auth.py  directory.py  document.py  management.py  test.py
include/handlers/management/: access.py  group.py  system.py  user.py
include/system/: messages.py
include/util/: __init__.py  audit.py  backup.py  log.py  user.py
include/util/rule/: applying.py
signing/: ee_cert.pem  ee_key.pem  generate_ca.py  generate_ee.py
src/: app.db-journal  config.sample.toml  config.toml.sample  main.py  requirements.txt  reset_password.py  test.py
src/alembic/: env.py
src/alembic/versions/: 148e5acbbe5c_userblockentry_update.py  436b0d3452b6_feature_keyrings.py  4d21b1e591d3_add_search_indexes.py  50df72915860_mount_to_root_node.py  5b4437a79292_rename_traffic_throttle_tables.py  5d459d56bf38_implement_marked_deletion.py  793312107aa5_limit_username_length.py  9087c4861e3d_user_status_management.py  9c6ab2902b6e_argon2id_feature.py  a1b2c3d4e5f6_add_search_indexes.py  a1b2c3d4e5f6_feat_keyring.py  a1b2c3d4e5f6_use_argon2id_drop_salt.py  a8eba9cf56e2_indexing.py  af3affb6e5e1_fix_delimiter_injection.py  b1c2d3e4f5a6_add_cascade_delete_constraints.py  c14bc87dd3f9_increase_secret_key_length.py  cbd5f06cfb68_feat_revision.py  ccd985e08120_modify_userblock_entries_id_type.py  ddacf7741794_support_download_resume.py  e09c3ecf8f0a_fix_delimiter_injection.py  e805605cbb30_optimize_database_structure.py
src/certtools/: .gitignore  README.md  generate_ee.py  generate_intermediate.py  pem2der.py
src/content/: hello
src/include/: conf_loader.py  connection_handler.py  constants.py  nonce_store.py  quic_server.py  router.py  shared.py  signature.py
src/include/classes/: auth.py  (+11 more)
src/maintenance_scripts/: clear_totp.py  fill_pepper.py  reset_password.py
tests/: README.md  __init__.py  conftest.py  test_access.py  test_basic.py  test_basic_old.py  test_client.py  test_debugging.py  test_debugging_old.py  test_directories.py  test_documents.py  test_file_ref_count.py  test_groups.py  test_keyring.py  test_password_protection.py  test_replay_protection.py  test_search.py  test_two_factor.py  test_users.py
(+65 files in other folders)
