[project]
name = "cfms-on-websocket"
version = "0.1.0"
description = "The server-side program for CFMS on WebSocket, a WebSocket-based implementation of the CFMS protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "filetype>=1.2.0",
    "jsonschema>=4.25.1",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "sqlalchemy>=2.0.44",
    "tomlkit>=0.13.3",
    "websockets>=15.0.1",
    "pywin32; sys_platform == 'win32'",
    "orjson>=3.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "alembic>=1.18.4",
]
