[project]
name = "cfms-on-websocket"
version = "0.2.0"
description = "The server-side program for CFMS on WebSocket, a WebSocket-based implementation of the CFMS protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "filetype>=1.2.0",
    "jsonschema>=4.25.1",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "sqlalchemy>=2.0.44",
    "tomlkit>=0.13.3",
    "websockets>=15.0.1",
    "pywin32; sys_platform == 'win32'",
    "orjson>=3.11.7",
    "pluggy>=1.6.0",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "alembic>=1.18.4",
    "pre-commit>=4.5.1",
]

[tool.ruff]
preview = false
line-length = 88
exclude = ["src/alembic", "src/certtools"]

[tool.ruff.lint]
ignore = [
    "E711", # allow `== None`
    "E712", # allow `== True`
    # "E402",
]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # allow `import *` in `__init__.py` for better package structuring
"src/include/database/models/*" = ["E711", "E712"] # allow `== None` and `== True` in database models
"tests/*" = ["E722"]  # allow bare `except:` in tests for better error detection

[tool.ruff.lint.isort]
known-first-party = ["include"]
